# ZeroSyntaxCpp

./: .gitignore  .gitmodules  CMakeLIsts.txt  README.md
Server/include/core/: document_manager.hpp
Server/include/protocol/: json_rpc_handler.hpp  lsp_messages.hpp  lsp_server.hpp
Server/include/utils/: logger.hpp
Server/src/: main.cpp
Server/src/core/: document_manager.cpp
Server/src/protocol/: json_rpc_handler.cpp  lsp_messages.cpp  lsp_server.cpp
Server/src/utils/: logger.cpp
Server/tests/: CMakeLists.txt  test_main.cpp
Server/tests/unit/: test_document_manager.cpp  test_json_rpc_handler.cpp  test_lsp_messages.cpp
